# lab1RSZI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: create_test.cmake
crypto_manager/: CMakeLists.txt  encoder.h
crypto_manager/src/: encoder.cpp
logger/: CMakeLists.txt  logger.h
logger/src/: logger.cpp
recursive_stepper/: CMakeLists.txt  recursive_processor.h
recursive_stepper/src/: recursive_processor.cpp
testing/: README.md
testing/dir_rec1/: README.md
testing/dir_rec1/dir_rec2/: languages.txt
testing/dir_rec1/dir_rec2/dir_rec3/: note.txt
testing/one_file_dir/: languages.txt
